# rslox

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
scripts/: run-tests.sh
src/: main.rs  rslox.rs
src/rslox/: builtins.rs  interpreter.rs  mod.rs  parser.rs  resolver.rs  scanner.rs  tests.rs
tests/: comments  comments.lox  cube_ansi.lox  for_loop.lox  function_return.lox  global_mutable_variable.lox  guess.lox  hello-world.lox  infinite_for_loop.lox  infinite_for_loop.test  labirint.lox  mandelbrot.lox  mandelbrot.test  non_existent-file.test  passing_global_variable_as_parameter.lox  primes.lox  print-function.lox  recursive_subtraction.lox  scopes.lox  syntax_errors.lox  unterminated-comment  unterminated-comment.test  unterminated-string  unterminated-string.lox  unterminated_string.test
