[package]
name = "rslox"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
ordered-float = "4.6.0"
thiserror = "2.0.11"

[build-dependencies]
anyhow = "1.0.95"
cargo-emit = "0.2.1"
const-gen = "1.6.5"
glob = "0.3.2"
proc-macro2 = "1.0.93"
quote = "1.0.38"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
